AMP-17853
git-svn-id: file:///svn/branches/AMP_2_10_RELEASE@24929 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4